2001-10-18  Christoph Pfisterer  <cp@chrisp.de>

	* fink.in: Added a --help option and some hints towards it
	(contributed by Justin Hallett).

2001-10-17  Christoph Pfisterer  <cp@chrisp.de>

	* fink.in: Becoming root is now handled by Fink::Engine. Remove
	CDPATH from the environment. Some other restructuring.

	* fink.in: Eliminated the remaining Fink::Config dependencies. The
	big modules are loaded only when needed. Now uses Getopt::Long to
	parse command line options (more to come in that department).

	* setup.sh: Hardcode base path into FinkVersion.pm.

2001-10-13  Christoph Pfisterer  <cp@chrisp.de>

	* README, README.html: Major overhaul. Brought up to date to
	reflect the current situation and made version-agnostic.

2001-10-09  Christoph Pfisterer  <cp@chrisp.de>

	* bootstrap.pl: Updated check for supported system versions to
	include Darwin 1.4.x (Mac OS X 10.1.x).

2001-09-29  Christoph Pfisterer  <cp@chrisp.de>

	* VERSION: Bumped package manager version to 0.9.1.

	* fink.in: Also add /usr/X11R6/bin and the */sbin dirs to the PATH
	while building.

2001-09-17  Christoph Pfisterer  <cp@chrisp.de>

	* VERSION: Bumped package manager version to 0.9.0. Some minor
	features are still missing, but fink (the package manager) is
	in the overall shape for a 1.0 release.

2001-09-11  Christoph Pfisterer  <cp@chrisp.de>

	* fink.in: Use methods of FinkVersion if possible.

	* bootstrap.pl: Removed special treatment of base-files. Use
	fink.info.in instead of packages/fink.in to generate the fink
	package description. Don't create FinkVersion.pm.
	* inject.pl: Removed special treatment of base-files. Use
	fink.info.in instead of packages/fink.in to generate the fink
	package description. Don't create FinkVersion.pm.
	* fink.info.in: Replaces packages/fink.in, no content changes.
	* packages/fink.in: Removed.
	* packages/base-files.in: Removed.
	* base-files: Whole directory moved to a separate CVS module.
